--- a/tcc_teste/tcc_teste/mainwindow.ui
+++ b/tcc_teste/tcc_teste/mainwindow.ui
@@ -85,6 +85,13 @@
        </property>
       </widget>
      </item>
+     <item row="0" column="0">
+      <widget class="QCheckBox" name="checkBox_2">
+       <property name="text">
+        <string>Automatically Create Directories and Files</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
    <widget class="QLabel" name="label">
