Separate audio and video feature added

--- a/tcc_teste/tcc_teste/mycoursedialog.ui
+++ b/tcc_teste/tcc_teste/mycoursedialog.ui
@@ -54,7 +54,7 @@
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QWidget" name="horizontalLayoutWidget">
+   <widget class="QWidget" name="gridLayoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -63,12 +63,26 @@
       <height>321</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="1" column="1">
+      <widget class="QListWidget" name="listWidget_2"/>
+     </item>
+     <item row="1" column="0">
       <widget class="QListWidget" name="listWidget"/>
      </item>
-     <item>
-      <widget class="QListWidget" name="listWidget_2"/>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Course List</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Class List</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
