--- a/djangofiles/djangobookmarks/templates/class_list.html
+++ b/djangofiles/djangobookmarks/templates/class_list.html
@@ -1,18 +1,12 @@
-{%if cours%}
-<ul class="cours">
-	{%for my_cours in cours%}
+{%if classes %}
+<ul class = "classes">
+	{%for class in classes %}
  		<li>
-			<a href=" /class/{{ my_cours.code|escape }}" class="title">
-			{{ my_cours.name }} - {{ my_cours.code|escape}}</a>
-			{%if show_edit %}
-				{% if my_cours.user_teacher == request.user %}
-				<a href="/class_save/?code={{ my_cours.code|escape }}" class="edit">[editar]</a>
-				{%endif%}
-			{%endif%}
-		<br />
+			<a href=" /class/{{ class.course.code }}/{{ class.name }}/" class="title">
+			{{ class.course.code}} - {{ class.course.name }} : {{ class.name }} - {{ class.year }}/{{ class.semester }} </a>
 	    </li>
 	{% endfor %}
 </ul>
 {% else %}
- <p> Nenhuma disciplina cadastrada </p>
+ <p> Nenhuma class </p>
 {%endif%}
