--- a/djangofiles/djangobookmarks/templates/search.html
+++ b/djangofiles/djangobookmarks/templates/search.html
@@ -11,7 +11,7 @@
 	</form>
 	<div id="search-results">
 	{%if show_results %}
-		{% include 'class_list.html' %}
+		{% include 'course_list.html' %}
 	{%endif%}
 	<script>
     </script>
