--- a/djangofiles/djangobookmarks/templates/video_upload.html
+++ b/djangofiles/djangobookmarks/templates/video_upload.html
@@ -1,6 +1,6 @@
 {%extends "base.html"%}
-{%block title%} Registro de Disciplina {%endblock%}
-{%block head%} Cadastre uma nova Disciplina {%endblock%}
+{%block title%} Upload de Video {%endblock%}
+{%block head%} Escolha um arquivo de vídeo {%endblock%}
 {%block content%}
 <form method="post" enctype="multipart/form-data" action=".">
 {% csrf_token %}
