--- a/djangofiles/djangobookmarks/templates/main_page.html
+++ b/djangofiles/djangobookmarks/templates/main_page.html
@@ -12,11 +12,11 @@
 	{%endif%}
 	<div class="center">
 	<p>
-	<video controls>
+	<!-- <video controls>
 	<source src="videos/teste.mp4" type="video/mp4" />
 	<source src="videos/small.ogv" type="video/ogg" />
 	Your browser does not support the video tag.
-	</video>
+	</video> -->
 	</p>
 	</div>
 {%endblock%}
