#1_web: Atualiza templates e escrita de arquivos .xml

--- a/djangofiles/djangobookmarks/templates/base.html
+++ b/djangofiles/djangobookmarks/templates/base.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" type = "text/css" href= "/site_media/style.css"/>
 	<script type="text/javascript" src="/site_media/jquery.js"></script>
 	{%block external%} {%endblock%}
-	<div id="header">AULAS UTFPR</div>
+	<!-- <div id="header">AULAS UTFPR</div> -->
 	<title> Aulas UTFPR | {% block title%} {%endblock%}</title>
 </head>
 <body>
