--- a/djangofiles/djangobookmarks/templates/course_page.html
+++ b/djangofiles/djangobookmarks/templates/course_page.html
@@ -10,7 +10,7 @@
 	{% include "class_list.html"%}
 	{% if show_button %}
 	<form action="class_save/">
-   	 <input type="submit" value="Adicionar Class" />
+   	 <input type="submit" value="Adicionar Turma" />
 	</form>
 	{% endif %}
 {%endblock%}
