--- a/tcc_project/tcc_project/templates/class_list.html
+++ b/tcc_project/tcc_project/templates/class_list.html
@@ -2,11 +2,11 @@
 <ul class = "classes">
 	{%for class in classes %}
  		<li>
-			<a href=" /class/{{ class.course.code }}/{{ class.name }}/" class="title">
+			<a href=" /class/{{ class.course.code }}/{{ class.name }}/{{ class.year }}/{{ class.semester }}" class="title">
 			{{ class.course.code}} - {{ class.course.name }} : {{ class.name }} - {{ class.year }}/{{ class.semester }} </a>
 	    </li>
 	{% endfor %}
 </ul>
 {% else %}
- <p> Nenhuma class </p>
+ <p> Nenhuma Turma </p>
 {%endif%}
