#10: Update do site p/ incluir mais infos de usuário

--- a/tcc_project/tcc_project/templates/class_page.html
+++ b/tcc_project/tcc_project/templates/class_page.html
@@ -9,8 +9,10 @@ Professores(a): <a href="/user/{{ class.user_teacher.username }}"> {{ class.user
 </p>
 {%endblock%}
 {%block content%}
+{%if is_class_teacher%}
 	{% include "video_list.html"%}
  	<form action="video_upload/">
    	<input type="submit" value="Adicionar Video" />
 	</form>
+{%endif%}
 {%endblock%}
