--- a/tcc_project/tcc_project/templates/main_page.html
+++ b/tcc_project/tcc_project/templates/main_page.html
@@ -12,8 +12,8 @@
 	{%endif%}
 	<div class="center">
 	<p>
-	<!-- <video controls>
-	<source src="videos/teste.mp4" type="video/mp4" />
+	<video controls>
+<!-- 	<source src="videos/teste.mp4" type="video/mp4" />
 	<source src="videos/small.ogv" type="video/ogg" />
 	Your browser does not support the video tag.
 	</video> -->
