--- a/tcc_project/tcc_project/templates/video_view.html
+++ b/tcc_project/tcc_project/templates/video_view.html
@@ -1,5 +1,6 @@
 	<video controls>
-	<source src="files/videos/teste.mp4" type="video/mp4" />
-	<source src="files/videos/small.ogv" type="video/ogg" />
+	<source src= "/{{video_url}}" type="video/ogg" />
+	<source src= "/{{video_url}}" type="video/mp4" />
+	<source src= "/{{video_url}}" type="video/ogg" />
 	Your browser does not support the video tag.
 	</video>
