--- a/tcc_project/tcc_project/templates/video_view.html
+++ b/tcc_project/tcc_project/templates/video_view.html
@@ -1,6 +1,7 @@
+	<script src="http://api.html5media.info/1.1.5/html5media.min.js"></script>
 	<video controls>
-	<source src= "/{{video_url}}" type="video/ogg" />
-	<source src= "/{{video_url}}" type="video/mp4" />
-	<source src= "/{{video_url}}" type="video/ogg" />
-	Your browser does not support the video tag.
+		<source src= "/{{video_url}}" type="video/webm" />
+		<source src= "/{{video_url}}" type="video/ogg" />
+		<source src= "/{{video_url}}" type="video/mp4" />
+		Your browser does not support the video tag.
 	</video>
