#10: Atualiza site -corrige upload de audio

--- a/tcc_project/tcc_project/templates/video_view.html
+++ b/tcc_project/tcc_project/templates/video_view.html
@@ -1,5 +1,5 @@
 	<script src="http://api.html5media.info/1.1.5/html5media.min.js"></script>
-	<video controls>
+	<video width="640" height="480" controls autoplay>
 		<source src= "/{{video_url}}" type="video/webm" />
 		<source src= "/{{video_url}}" type="video/ogg" />
 		<source src= "/{{video_url}}" type="video/mp4" />
