--- a/tcc_project/tcc_project/templates/user_page.html
+++ b/tcc_project/tcc_project/templates/user_page.html
@@ -1,6 +1,6 @@
 {%extends "base.html"%}
-{%block title%} {{ username }} {%endblock%}
-{%block head%} Professor(a) {{ username }}
+{%block title%} {{ user.username }} {%endblock%}
+{%block head%} Professor(a)  {{ user.first_name }} {{ user.last_name }}
 </p> Aulas ministradas: </p> {%endblock%}
 {%block content%}
 	{% include "class_list.html"%}
