--- a/tcc_project/tcc_project/templates/base.html
+++ b/tcc_project/tcc_project/templates/base.html
@@ -1,22 +1,23 @@
 <html>
 <head>
-	<link rel="stylesheet" type = "text/css" href= "/site_media/style.css"/>
+	<link rel="stylesheet" type = "text/css" href= "/site_media/teste.css"/>
 	<script type="text/javascript" src="/site_media/jquery.js"></script>
 	{%block external%} {%endblock%}
-	<!-- <div id="header">AULAS UTFPR</div> -->
+	<div id="header">LECTURE RECORDINGS </div>
+	<div id="subheader"> UTFPR </div>
 	<title> Aulas UTFPR | {% block title%} {%endblock%}</title>
 </head>
 <body>
-	<div id="nav">
-	<a href="/"> home </a> |
+	<div class="flex">
+	<a id="button"  class="flex-child" href="/"> home </a>
 	{% if user.is_authenticated %}
-		<a href= "/user/{{ user.username }}"/>{{ user.username }} </a> |
-		<a href= "/class"> disciplinas </a>	|
-		<a href= "/search"> busca </a>	|
-		<a href= "/logout"> logout </a> |
+		<a id="button" class="flex-child" href= "/user/{{ user.username }}"/>{{ user.username }} </a>
+		<a id="button" class="flex-child" href= "/class"> disciplinas </a>
+		<a id="button" class="flex-child" href= "/search"> busca </a>
+		<a id="button" class="flex-child" href= "/logout"> logout </a>
 	{%else%}
-		<a href= "/login"> login </a> |
-		<a href= "/register"> cadastrar </a>
+		<a id="button" class="flex-child"href= "/login"> login </a>
+		<a id="button" class="flex-child"href= "/register"> cadastrar </a>
 	{% endif %}
 	</div>
 	<h1> {%block head %} {%endblock%}</h1>
