--- a/tcc_project/tcc_project/templates/class_page.html
+++ b/tcc_project/tcc_project/templates/class_page.html
@@ -1,11 +1,14 @@
 {%extends "base.html"%}
+{% block external %}
+	<script type="text/javascript" src="/site_media/open_media.js"></script>
+{%endblock%}
 {%block title%} {{ course.code }} || {{ class.name }}  {%endblock%}
 {%block head%} {{ course.name }} - {{ course.code  }} 
 <h4>
 {{ class.name }} - {{ class.year }}/{{ class.semester }}
 </h4>
 <p>
-Professores(a): <a href="/user/{{ class.user_teacher.username }}"> {{ class.user_teacher.username }} </a>
+Professor(a): <a href="/user/{{ class.user_teacher.username }}"> {{ class.user_teacher.first_name }} {{ class.user_teacher.last_name }} </a>
 </p>
 {%endblock%}
 {%block content%}
