--- a/tcc_project/tcc_project/templates/course_list_page.html
+++ b/tcc_project/tcc_project/templates/course_list_page.html
@@ -1,6 +1,6 @@
 {%extends "base.html"%}
 {% block external %}
-	<script type="text/javascript" src="/site_media/course_edit.js"></script>
+	<script type="text/javascript" src="/site_media/class_edit.js"></script>
 {%endblock%}
 {%block title%} Disciplinas {%endblock%}
 {%block head%} Lista de todas as disciplinas cadastradas: {%endblock%}
@@ -8,7 +8,10 @@
 {%include 'course_list.html' %}
 {%if user.is_authenticated%}
 {%if user.profile.is_teacher%}
-<a href= "/course_save"> Cadastrar Disciplina </a>
+<input type="button" value="Click me" onclick="cadastrar()">
+<form action="/course_save/">
+   <input type="submit" value="Cadastrar Disciplina" />
+</form>
 {%endif%}
 {%endif%}
 {%endblock%}
