--- a/tcc_project/tcc_project/templates/base.html
+++ b/tcc_project/tcc_project/templates/base.html
@@ -9,16 +9,18 @@
 </head>
 <body>
 	<div class="flex">
-	<a id="button"  class="flex-child" href="/"> home </a>
+	<ul class="nav">
+		<li class="nav_item"><a  href="/"> home </a></li>
 	{% if user.is_authenticated %}
-		<a id="button" class="flex-child" href= "/user/{{ user.username }}"/>{{ user.username }} </a>
-		<a id="button" class="flex-child" href= "/class"> disciplinas </a>
-		<a id="button" class="flex-child" href= "/search"> busca </a>
-		<a id="button" class="flex-child" href= "/logout"> logout </a>
+		<li class="nav_item"> <a href= "/user/{{ user.username }}"/>{{ user.username }} </a></li>
+		<li class="nav_item"> <a href= "/class"> disciplinas </a></li>
+		<li class="nav_item"> <a href= "/search"> busca </a></li>
+		<li class="nav_item"> <a href= "/logout"> logout </a></li>
 	{%else%}
-		<a id="button" class="flex-child"href= "/login"> login </a>
-		<a id="button" class="flex-child"href= "/register"> cadastrar </a>
+		<li class="nav_item"> <a href= "/login"> login </a></li>
+		<li class="nav_item"> <a href= "/register"> cadastrar </a></li>
 	{% endif %}
+	</ul>
 	</div>
 	<h1> {%block head %} {%endblock%}</h1>
 	{%block content%} {%endblock%}
