--- a/tcc_gui/tcc_gui/mycoursedialog.ui
+++ b/tcc_gui/tcc_gui/mycoursedialog.ui
@@ -26,14 +26,14 @@
     <item>
      <widget class="QPushButton" name="pushButton">
       <property name="text">
-       <string>Back</string>
+       <string>Voltar</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton_2">
       <property name="text">
-       <string>Continue</string>
+       <string>Continuar</string>
       </property>
      </widget>
     </item>
@@ -73,14 +73,14 @@
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
-        <string>Course List</string>
+        <string>Lista de Cursos</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Class List</string>
+        <string>Lista de Turmas</string>
        </property>
       </widget>
      </item>
